# OpenMVG-test

./: .gitignore  README.md
src/openMVG/multiview/: solver_resection_kernel.cpp  two_view_kernel.hpp
src/openMVG_Samples/: CMakeLists.txt
src/openMVG_Samples/eightPointsEssential/: CMakeLists.txt  eight_points_essential.cpp  eight_points_essential_hardcoded.cpp
src/openMVG_Samples/sixPointsResection/: CMakeLists.txt  six_points_resection.cpp  six_points_resection_hardcoded.cpp
